infra/k8s/certificate-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: certificate-processor
  name: certificate-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: certificate-processor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: certificate-processor
    spec:
      containers:
        - env:
            - name: ADMIN_API_CLIENT_SECRET
              value: 1d9a5c6c-0c23-47e2-850c-3d04b0b56d87
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka-service:9092
            - name: KEYCLOAK_URL
              value: http://keycloak:8080/auth
            - name: REGISTRY_URL
              value: http://registry:8081
          image: dockerhub/certificate_processor
          name: certificate-processor
          resources: {}
      restartPolicy: Always
status: {}
