infra/k8s/clickhouse-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: clickhouse-server
  name: clickhouse-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: clickhouse-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: clickhouse-server
    spec:
      containers:
        - image: yandex/clickhouse-server
          name: clickhouse-server
          ports:
            - containerPort: 8123
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
