infra/k8s/digilocker-support-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: digilocker-support-api
  name: digilocker-support-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: digilocker-support-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: digilocker-support-api
    spec:
      containers:
        - env:
            - name: DIGILOCKER_HMAC_AUTHKEY
              value: UPDATE_KEY_GIVEN_IN_DIGILOCKER
            - name: REGISTRY_URL
              value: http://registry:8081
          image: dockerhub/digilocker_support_api
          name: digilocker-support-api
          ports:
            - containerPort: 8003
          resources: {}
      restartPolicy: Always
status: {}
