infra/k8s/flagr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: flagr
  name: flagr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flagr
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: flagr
    spec:
      containers:
        - env:
            - name: FLAGR_DB_DBCONNECTIONSTR
              value: postgres://postgres:uhAer5489@jsi-pg.c47qvcjxjdo1.us-east-1.rds.amazonaws.com:5432/divoc?sslmode=disable
            - name: FLAGR_DB_DBDRIVER
              value: postgres
            - name: FLAGR_WEB_PREFIX
              value: /config
            - name: HOST
              value: 0.0.0.0
          image: checkr/flagr
          name: flagr
          ports:
            - containerPort: 18000
          resources: {}
      restartPolicy: Always
status: {}
