infra/k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: jsi-pg.c47qvcjxjdo1.us-east-1.rds.amazonaws.com
            - name: DB_DATABASE
              value: divoc
            - name: DB_PASSWORD
              value: uhAer5489
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
            - name: DB_VENDOR
              value: postgres
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: KEYCLOAK_USER
              value: admin
          image: dockerhub/keycloak
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9990
            failureThreshold: 4
            periodSeconds: 30
            timeoutSeconds: 10
          name: keycloak
          ports:
            - containerPort: 8080
            - containerPort: 9990
          resources: {}
      restartPolicy: Always
status: {}
