infra/k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: notification-service
    spec:
      containers:
        - env:
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka-service:9092
            - name: SENDER_EMAIL
              value: xxxx@mail.com
            - name: SENDER_PASSWORD
              value: xxxx
            - name: SMS_AUTH_KEY
              value: xxxx
          image: dockerhub/notification-service
          name: notification-service
          ports:
            - containerPort: 8765
          resources: {}
      restartPolicy: Always
status: {}
