infra/k8s/clickhouse-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: clickhouse-server
  name: clickhouse-server
spec:
  ports:
    - name: "8123"
      port: 8123
      targetPort: 8123
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: clickhouse-server
status:
  loadBalancer: {}
