infra/k8s/flagr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: flagr
  name: flagr
spec:
  ports:
    - name: "18000"
      port: 18000
      targetPort: 18000
  selector:
    io.kompose.service: flagr
status:
  loadBalancer: {}
