infra/k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-service
  name: notification-api
spec:
  ports:
    - name: "8765"
      port: 8765
      targetPort: 8765
  selector:
    io.kompose.service: notification-service
status:
  loadBalancer: {}
